--- a/public/series/index.html
+++ b/public/series/index.html
@@ -5,11 +5,11 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="robots" content="index, follow">
-<title>Categories | orphicsec</title>
+<title>Series | orphicsec</title>
 <meta name="keywords" content="">
 <meta name="description" content="orphicsec - security engineer">
 <meta name="author" content="orphicsec">
-<link rel="canonical" href="http://localhost:1313/categories/">
+<link rel="canonical" href="http://localhost:1313/series/">
 <link crossorigin="anonymous" href="/assets/css/stylesheet.21f8fc73ae8a324c8c700274e9bdf79c3cb5c118ad8d537f4af3f823b23a2b4a.css" integrity="sha256-Ifj8c66KMkyMcAJ06b33nDy1wRitjVN/SvP4I7I6K0o=" rel="preload stylesheet" as="style">
 <link rel="icon" href="http://localhost:1313/favicon.ico">
 <link rel="icon" type="image/png" sizes="16x16" href="http://localhost:1313/favicon-16x16.png">
@@ -18,8 +18,8 @@
 <link rel="mask-icon" href="http://localhost:1313/safari-pinned-tab.svg">
 <meta name="theme-color" content="#2e2e33">
 <meta name="msapplication-TileColor" content="#2e2e33">
-<link rel="alternate" type="application/rss+xml" href="http://localhost:1313/categories/index.xml" title="rss">
-<link rel="alternate" hreflang="en" href="http://localhost:1313/categories/">
+<link rel="alternate" type="application/rss+xml" href="http://localhost:1313/series/index.xml" title="rss">
+<link rel="alternate" hreflang="en" href="http://localhost:1313/series/">
 <noscript>
     <style>
         #theme-toggle,
@@ -34,16 +34,16 @@
         document.querySelector("html").dataset.theme = 'light';
     }
 
-</script><meta property="og:url" content="http://localhost:1313/categories/">
+</script><meta property="og:url" content="http://localhost:1313/series/">
   <meta property="og:site_name" content="orphicsec">
-  <meta property="og:title" content="Categories">
+  <meta property="og:title" content="Series">
   <meta property="og:description" content="orphicsec - security engineer">
   <meta property="og:locale" content="en">
   <meta property="og:type" content="website">
       <meta property="og:image" content="http://localhost:1313/images/papermod-cover.png">
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:image" content="http://localhost:1313/images/papermod-cover.png">
-<meta name="twitter:title" content="Categories">
+<meta name="twitter:title" content="Series">
 <meta name="twitter:description" content="orphicsec - security engineer">
 
 </head>
@@ -107,7 +107,7 @@
 </header>
 <main class="main">
 <header class="page-header">
-    <h1>Categories</h1>
+    <h1>Series</h1>
 </header>
 
 
