--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,10 @@
 
 <link rel="stylesheet" href="/css/custom.css">
 
+
+<meta name="description" content="The personal writings and expressions of Grayfox, otherwise known as you too and everyone else. It is a loving and silly place.">
+<meta name="author" content="">
+
   </head>
 
   <body>
