--- a/public/index.html
+++ b/public/index.html
@@ -46,15 +46,17 @@
 
   <p><img
 id="foxy"
-src="/images/mush.png"
+src="/images/me.png"
 alt="A foxy face"
 width=150></p>
-<h2 id="hello-friend">Hello, friend</h2>
-<h3 id="purple_heart-earth_africa-purple_heart">&#x1f49c; &#x1f30d; &#x1f49c;</h3>
-<p>Born <a href="https://en.wikipedia.org/wiki/Portugal">somewhere</a>, <del><strong>mush</strong></del>, <strong>mushy</strong> - also known as <del>Miguel</del> - has spent over two decades fiddling with things on the Internet. Here, he just rants.</p>
+<h2 id="hello-friend---">hello, friend . . .</h2>
+<h3 id="blue_heart-purple_heart-heart">&#x1f499; &#x1f49c; &#x2764;&#xfe0f;</h3>
+<p>Born in a void <a href="https://en.wikipedia.org/wiki/Portugal">somewhere</a>, <strong>mushy</strong> - also known as <del>Miguel Cardoso</del> - I&rsquo;m just a curious mind doing things on the interwebz. Here, I post rants, think of systems and cry about security.</p>
+<blockquote>
 <p><em>“The lips of Wisdom are closed, except to the ears of Understanding.”</em></p>
-<img src="/images/partywizard.gif">
+</blockquote>
 <hr>
+<img src="/images/partywizard.gif" width=50>
 <h2 id="thoughts--rants">Thoughts &amp; Rants</h2>
 
 
