--- a/public/404.html
+++ b/public/404.html
@@ -1,51 +1,2 @@
-<!DOCTYPE html>
-<html lang="en-us">
-  <head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
 
-    <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png">
-    <link rel="manifest" href="/images/site.webmanifest">
-
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Lord of Order and Chaos">
-    <title>404 Page not found | orphicsec</title>
-    <link rel="stylesheet" href="/css/style.css" />
-    <link rel="stylesheet" href="/css/fonts.css" />
-    <link rel="stylesheet" href="http://localhost:1313/css/theme-override.css">
-    
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;500;600&display=swap" rel="stylesheet">
-
-
-<link rel="stylesheet" href="/css/custom.css">
-
-
-<meta name="description" content="Lord of Order and Chaos">
-<meta name="author" content="">
-
-  </head>
-
-  <body>
-<header>
-    <nav style="margin-bottom: 3rem;">
-        <a href="/" style="font-weight: 600; margin-right: 1.5rem;">~</a>
-        <a href="/post" style="margin-right: 1.5rem;">posts</a>
-        <a href="/about" style="margin-right: 1.5rem;">about</a>
-        <a href="/projects">projects</a>
-    </nav>
-</header>
-
-
-
-404 - You once were found. But now you're lost.
-
-<footer>
-    <hr style="border: 0; border-top: 1px solid #222; margin: 3rem 0 1rem;">
-    <p style="color: #444; font-size: 0.85rem;">mushy © 2025</p>
-</footer>
-  </body>
-</html>
-
+<script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
