--- a/public/about/index.html
+++ b/public/about/index.html
@@ -10,7 +10,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Lord of Order and Chaos">
-    <title>About | orphicsec</title>
+    <title>$? | orphicsec</title>
     <link rel="stylesheet" href="/css/style.css" />
     <link rel="stylesheet" href="/css/fonts.css" />
     <link rel="stylesheet" href="http://localhost:1313/css/theme-override.css">
@@ -41,7 +41,7 @@
 
 
 <div class="article-meta">
-    <h1>About</h1>
+    <h1>$?</h1>
     <div style="color: #555; font-size: 0.85rem; margin-bottom: 2rem;">
       0001-01-01 · 1 min read
     </div>
@@ -49,11 +49,69 @@
 
 <div class="content-wrapper">
   <main>
-    <p>Your about content here.</p>
+    <h1 id="job-experience">Job Experience</h1>
+<ul>
+<li>
+<p>Security Engineer @ Critical TechWorks | BMW Group <strong>- Present</strong></p>
+</li>
+<li>
+<p>NSOC Analyst T1 / T2 @ Jolera MSP <em>- Past</em></p>
+</li>
+<li>
+<p>IT Guy / System Administrator @ Trovisca <em>- Past</em></p>
+</li>
+<li>
+<p>Prior Roles:</p>
+<ul>
+<li><del><em>Helpdesk, IT Intern, Receptionist, Burguer Flipper</em></del></li>
+</ul>
+</li>
+</ul>
+<hr>
+<h1 id="certifications">Certifications</h1>
+<ul>
+<li><a href="https://cyberwarfare.live/product/multi-cloud-blue-team-analyst-mcbta/">MCBTA</a> - Certified Multi-Cloud Blue Team Analyst</li>
+<li><a href="https://ine.com/security/certifications/ejpt-certification">eJPT</a> - Junior Penetration Tester</li>
+<li><a href="https://www.isc2.org/certifications/cc">CC</a> - ISC2 Certified in Cybersecurity</li>
+<li><a href="https://shop.csilinux.com/shop/uncategorized/csi-linux-certified-investigator/">CSIL-CI</a> - CSI Linux Certified Investigator</li>
+</ul>
+<hr>
+<h1 id="recent-training">Recent Training</h1>
+<table>
+  <thead>
+      <tr>
+          <th>Course</th>
+          <th>Provider</th>
+          <th>Date Completed</th>
+      </tr>
+  </thead>
+  <tbody>
+      <tr>
+          <td><a href="https://academy.tcm-sec.com/p/security-operations-soc-101">Security Operations (SOC) 101</a></td>
+          <td>TCM Security</td>
+          <td><em><strong>In Progress</strong></em></td>
+      </tr>
+      <tr>
+          <td><a href="https://skillbuilder.aws/learn/3YUGQ782JF/aws-security-essentials/UK6ZVSUG6C">AWS Security Essentials</a></td>
+          <td>Amazon Web Services (AWS)</td>
+          <td>Oct 2025</td>
+      </tr>
+      <tr>
+          <td><a href="https://skillbuilder.aws/learn/TFDQJZ1UV5/architecting-on-aws/DPS7CTFY8J">Architecting on AWS</a></td>
+          <td>Amazon Web Services (AWS)</td>
+          <td>Oct 2025</td>
+      </tr>
+  </tbody>
+</table>
+<hr>
+<h1 id="education">Education</h1>
+<blockquote>
+<p>None of your business.</p>
+</blockquote>
 
     <nav style="margin-top: 4rem; padding-top: 2rem; border-top: 1px solid #1a1a1a; display: flex; justify-content: space-between;">
       
-      <a href="http://localhost:1313/about/" style="color: #888;">About →</a>
+      <a href="http://localhost:1313/about/" style="color: #888;">$? →</a>
     </nav>
   </main>
 </div>
