--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,7 @@ alt="A foxy face"
 width=150></p>
 <h2 id="hello-friend---">hello, friend . . .</h2>
 <h3 id="blue_heart-purple_heart-heart">&#x1f499; &#x1f49c; &#x2764;&#xfe0f;</h3>
-<p>Born in a void <a href="https://en.wikipedia.org/wiki/Portugal">somewhere</a>, <strong>mushy</strong> - also known as <del>Miguel Cardoso</del> - I&rsquo;m just a curious mind doing things on the interwebz. Here, I post rants, think of systems and cry about security.</p>
+<p>Born in a void <a href="https://en.wikipedia.org/wiki/Portugal">somewhere</a>, I&rsquo;m <strong>orphic</strong> - also known as <del>Miguel Cardoso</del>, <del><em>mush</em></del>&hellip; - a curious mind doing things on the interwebz. Here, I post rants, think of systems and cry about security.</p>
 <blockquote>
 <p><em>“The lips of Wisdom are closed, except to the ears of Understanding.”</em></p>
 </blockquote>
