--- a/public/about/index.html
+++ b/public/about/index.html
@@ -49,7 +49,7 @@
 
 <div class="content-wrapper">
   <main>
-    <h1 id="job-experience">Job Experience</h1>
+    <h1 id="job-experience">JOB EXPERIENCE</h1>
 <ul>
 <li>
 <p>Security Engineer @ Critical TechWorks | BMW Group <strong>- Present</strong></p>
@@ -68,7 +68,7 @@
 </li>
 </ul>
 <hr>
-<h1 id="certifications">Certifications</h1>
+<h1 id="certifications">CERTIFICATIONS</h1>
 <ul>
 <li><a href="https://cyberwarfare.live/product/multi-cloud-blue-team-analyst-mcbta/">MCBTA</a> - Certified Multi-Cloud Blue Team Analyst</li>
 <li><a href="https://ine.com/security/certifications/ejpt-certification">eJPT</a> - Junior Penetration Tester</li>
@@ -76,37 +76,47 @@
 <li><a href="https://shop.csilinux.com/shop/uncategorized/csi-linux-certified-investigator/">CSIL-CI</a> - CSI Linux Certified Investigator</li>
 </ul>
 <hr>
-<h1 id="recent-training">Recent Training</h1>
+<h1 id="recent-training">RECENT TRAINING</h1>
 <table>
   <thead>
       <tr>
           <th>Course</th>
           <th>Provider</th>
           <th>Date Completed</th>
+          <th>Duration</th>
       </tr>
   </thead>
   <tbody>
       <tr>
           <td><a href="https://academy.tcm-sec.com/p/security-operations-soc-101">Security Operations (SOC) 101</a></td>
           <td>TCM Security</td>
-          <td><em><strong>In Progress</strong></em></td>
+          <td>&mdash; <em><strong>Ongoing</strong></em> &mdash;</td>
+          <td></td>
+      </tr>
+      <tr>
+          <td><a href="https://academy.hackthebox.com/path/preview/junior-cybersecurity-analyst">Junior Cybersecurity Analyst Job Role Path</a></td>
+          <td>Hack The Box Academy</td>
+          <td>&mdash; <em><strong>Ongoing</strong></em> &mdash;</td>
+          <td></td>
       </tr>
       <tr>
           <td><a href="https://skillbuilder.aws/learn/3YUGQ782JF/aws-security-essentials/UK6ZVSUG6C">AWS Security Essentials</a></td>
           <td>Amazon Web Services (AWS)</td>
           <td>Oct 2025</td>
+          <td>1 day</td>
       </tr>
       <tr>
           <td><a href="https://skillbuilder.aws/learn/TFDQJZ1UV5/architecting-on-aws/DPS7CTFY8J">Architecting on AWS</a></td>
           <td>Amazon Web Services (AWS)</td>
           <td>Oct 2025</td>
+          <td>3 days</td>
       </tr>
   </tbody>
 </table>
 <hr>
-<h1 id="education">Education</h1>
+<h1 id="education">EDUCATION</h1>
 <blockquote>
-<p>None of your business.</p>
+<p>Cybersecurity Specialist - <em>(ANCIBER) Academia Nacional de CiberSegurança</em></p>
 </blockquote>
 
     <nav style="margin-top: 4rem; padding-top: 2rem; border-top: 1px solid #1a1a1a; display: flex; justify-content: space-between;">
