Changed name in footer

--- a/public/index.html
+++ b/public/index.html
@@ -79,7 +79,7 @@ width=150></p>
 </div>
 <footer>
     <hr style="border: 0; border-top: 1px solid #222; margin: 3rem 0 1rem;">
-    <p style="color: #444; font-size: 0.85rem;">mushy © 2025</p>
+    <p style="color: #444; font-size: 0.85rem;">orphic © 2025</p>
 </footer>
   </body>
 </html>
